@@ -67,6 +67,9 @@ See <<esm>> for full details.
 [float]
 ===== Bug fixes
 
+* Ensure `apm.setGlobalLabel(...)` does not throw an error when apm is inactive.
+  ({issues}3442[#3442])
+
 [float]
 ===== Chores
 
